# Copyright 2022 Heath Stewart.
# Licensed under the MIT License. See LICENSE.txt in the project root for license information.

[package]
name = "msica"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust for Windows Installer Custom Actions"
homepage = "https://github.com/heaths/msica-rs/"
repository = "https://github.com/heaths/msica-rs/"

[[example]]
name = "deferred"
crate-type = ["cdylib"]
path = "examples/deferred/lib.rs"
